--- a/Ssilki.html
+++ b/Ssilki.html
@@ -42,7 +42,7 @@
   <main style=" margin-top: 100px"><div class="container">
   <p><div align="center" style="color:#ffffff"><h1>Директор и режисер</h1></div></p> 
   <p><div align="center" style="margin-top: 100px"><img src="img/Director.jpg"></div></p>
-  <p><div style="width:750px;margin-left:275px;text-align: center;">Я работаю в <a href="Glavn.html" style="color:#ffffff;text-decoration: none;">Omeleto</a>, занимаюсь продюсированием рекламных роликов и документальных фильмов. Я всегда ищу маленькие моменты и большие истины. Я хочу рассказывать истории, которые вдохновляют нас стать лучше.</div></p>
+  <p><div style="width:750px;margin-left:275px;text-align: center;">Я работаю в <a href="Index.html" style="color:#ffffff;text-decoration: none;">Omeleto</a>, занимаюсь продюсированием рекламных роликов и документальных фильмов. Я всегда ищу маленькие моменты и большие истины. Я хочу рассказывать истории, которые вдохновляют нас стать лучше.</div></p>
       <p><h1><div align="center"><a href="" style="color:#878787" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
 </svg></a>
